# go-rust

./: Cargo.toml  README.md
src/: data.rs  game.rs  main.rs
