[package]
name = "go_rust"
version = "0.1.0"
authors = ["thomas <tom.bauer95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.52.0"
piston2d-graphics = "0.36.0"
#pistoncore-glutin_window = "0.66.0"
piston2d-opengl_graphics = "0.73.0"
piston_window = "0.111.0"
find_folder = "0.3.0"
piston2d-touch_visualizer = "0.26.0"

[dependencies.pistoncore-sdl2_window]
version = "0.66.0"
optional = true

[dependencies.pistoncore-glfw_window]
version = "0.68.0"
optional = true

[dependencies.pistoncore-glutin_window]
version = "0.66.0"
optional = true

[features]
default = ["include_glfw"]
include_sdl2 = ["pistoncore-sdl2_window"]
include_glfw = ["pistoncore-glfw_window"]
